--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
       padding: 2rem;
       background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png');
     }
-
     h1 {
       text-transform: uppercase;
       letter-spacing: 2px;
       font-size: 1.8rem;
       text-align: center;
     }
-
     input[type="text"] {
       padding: 10px;
       font-size: 1rem;
@@ -34,7 +32,6 @@
       border-radius: 5px;
       margin-top: 1rem;
     }
-
     button {
       padding: 10px 20px;
       margin-top: 1rem;
@@ -45,7 +42,6 @@
       border-radius: 5px;
       cursor: pointer;
     }
-
     #answer {
       display: none;
       margin-top: 2rem;
@@ -55,18 +51,22 @@
       max-width: 600px;
       text-align: left;
     }
+    .incorrect {
+      border-left: 5px solid #ff4d4d;
+    }
   </style>
 </head>
 <body>
   <h1>Detective Jenkins' Final Question</h1>
   <p>Who do you believe murdered Evelyn Harper? <br><em>(Enter full name to unlock case report)</em></p>
-
   <input type="text" id="guess" placeholder="Full Name (e.g., Clara Jane Summers)" />
   <button onclick="checkAnswer()">Submit</button>
 
   <div id="answer">
-    <h2>✅ Case Closed</h2>
-    <p><strong>Clara Jane Summers</strong> murdered Evelyn Harper out of jealousy and desperation. She manipulated the scene and attempted to divert suspicion onto others. But the combination of her fingerprints on the broken perfume bottle, an overheard argument, and an incriminating message confirmed her guilt.</p>
+    <h2 id="result-heading">✅ Case Closed</h2>
+    <p id="result-text">
+      <strong>Clara Jane Summers</strong> murdered Evelyn Harper out of jealousy and desperation. She manipulated the scene and attempted to divert suspicion onto others. But the combination of her fingerprints on the broken perfume bottle, an overheard argument, and an incriminating message confirmed her guilt.
+    </p>
     <p>Well done, Detective. You’ve helped bring justice to Moonlight Mansion.</p>
   </div>
 
@@ -74,11 +74,21 @@
     function checkAnswer() {
       const input = document.getElementById("guess").value.trim().toLowerCase();
       const correct = "clara jane summers";
+      const answerBox = document.getElementById("answer");
+      const heading = document.getElementById("result-heading");
+      const text = document.getElementById("result-text");
+
       if (input === correct) {
-        document.getElementById("answer").style.display = "block";
+        answerBox.classList.remove("incorrect");
+        heading.textContent = "✅ Case Closed";
+        text.innerHTML = "<strong>Clara Jane Summers</strong> murdered Evelyn Harper out of jealousy and desperation. She manipulated the scene and attempted to divert suspicion onto others. But the combination of her fingerprints on the broken perfume bottle, an overheard argument, and an incriminating message confirmed her guilt.";
       } else {
-        alert("Incorrect. Review the evidence and try again.");
+        answerBox.classList.add("incorrect");
+        heading.textContent = "❌ Incorrect – But Here's the Truth";
+        text.innerHTML = "<strong>Clara Jane Summers</strong> was the true killer. Despite attempts to cover her tracks, the evidence was undeniable: fingerprints, witness accounts, and motive. Review the case and see where the clues pointed.";
       }
+
+      answerBox.style.display = "block";
     }
   </script>
 </body>
