--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     .incorrect {
       border-left: 5px solid #ff4d4d;
     }
+    #congrats {
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -67,7 +70,7 @@
     <p id="result-text">
       <strong>Clara Jane Summers</strong> murdered Evelyn Harper out of jealousy and desperation. She manipulated the scene and attempted to divert suspicion onto others. But the combination of her fingerprints on the broken perfume bottle, an overheard argument, and an incriminating message confirmed her guilt.
     </p>
-    <p>Well done, Detective. You’ve helped bring justice to Moonlight Mansion.</p>
+    <p id="congrats">Well done, Detective. You've helped bring justice to Moonlight Mansion.</p>
   </div>
 
   <script>
@@ -77,15 +80,20 @@
       const answerBox = document.getElementById("answer");
       const heading = document.getElementById("result-heading");
       const text = document.getElementById("result-text");
+      const congrats = document.getElementById("congrats");
 
       if (input === correct) {
         answerBox.classList.remove("incorrect");
         heading.textContent = "✅ Case Closed";
         text.innerHTML = "<strong>Clara Jane Summers</strong> murdered Evelyn Harper out of jealousy and desperation. She manipulated the scene and attempted to divert suspicion onto others. But the combination of her fingerprints on the broken perfume bottle, an overheard argument, and an incriminating message confirmed her guilt.";
+        congrats.style.display = "block";
+        answerBox.style.display = "block";
       } else {
         heading.textContent = "❌ Incorrect – But Here's the Truth";
-    text.innerHTML = "<strong>Clara Jane Summers</strong> was the true killer. Despite attempts to cover her tracks, the evidence was undeniable: fingerprints, witness accounts, and motive. Review the case and see where the clues pointed.";
-    answerBox.style.display = "block"; // Show the answer box on incorrect
+        text.innerHTML = "<strong>Clara Jane Summers</strong> was the true killer. Despite attempts to cover her tracks, the evidence was undeniable: fingerprints, witness accounts, and motive. Review the case and see where the clues pointed.";
+        congrats.style.display = "none";
+        answerBox.style.display = "block";
+      }
     }
   </script>
 </body>
