--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
   <h1>Detective Jenkins' Final Question</h1>
   <p>Who do you believe murdered Evelyn Harper? <br><em>(Enter full name to unlock case report)</em></p>
-  <input type="text" id="guess" placeholder="Full Name (e.g., Clara Jane Summers)" />
+  <input type="text" id="guess" placeholder="Full Name" />
   <button onclick="checkAnswer()">Submit</button>
 
   <div id="answer">
