--- a/index.html
+++ b/index.html
@@ -66,33 +66,57 @@
   <button onclick="checkAnswer()">Submit</button>
 
   <div id="answer">
-    <h2 id="result-heading">✅ Case Closed</h2>
-    <p id="result-text">
-      <strong>Clara Jane Summers</strong> murdered Evelyn Harper out of jealousy and desperation. She manipulated the scene and attempted to divert suspicion onto others. But the combination of her fingerprints on the broken perfume bottle, an overheard argument, and an incriminating message confirmed her guilt.
-    </p>
+    <h2 id="result-heading"></h2>
+    <p id="result-text"></p>
     <p id="congrats">Well done, Detective. You've helped bring justice to Moonlight Mansion.</p>
   </div>
 
   <script>
+    let tries = 0;
+    const maxTries = 2;
+    const correct = "clara jane summers";
+
     function checkAnswer() {
       const input = document.getElementById("guess").value.trim().toLowerCase();
-      const correct = "clara jane summers";
       const answerBox = document.getElementById("answer");
       const heading = document.getElementById("result-heading");
       const text = document.getElementById("result-text");
       const congrats = document.getElementById("congrats");
 
+      tries++;
+
       if (input === correct) {
-        answerBox.classList.remove("incorrect");
         heading.textContent = "✅ Case Closed";
-        text.innerHTML = "<strong>Clara Jane Summers</strong> murdered Evelyn Harper out of jealousy and desperation. She manipulated the scene and attempted to divert suspicion onto others. But the combination of her fingerprints on the broken perfume bottle, an overheard argument, and an incriminating message confirmed her guilt.";
+        text.innerHTML = "";
         congrats.style.display = "block";
+        answerBox.classList.remove("incorrect");
         answerBox.style.display = "block";
+        // Disable further input after success
+        document.getElementById("guess").disabled = true;
+        event.target.disabled = true;
       } else {
-        heading.textContent = "❌ Incorrect – But Here's the Truth";
-        text.innerHTML = "<strong>Clara Jane Summers</strong> was the true killer. Despite attempts to cover her tracks, the evidence was undeniable: fingerprints, witness accounts, and motive. Review the case and see where the clues pointed.";
-        congrats.style.display = "none";
-        answerBox.style.display = "block";
+        if (tries < maxTries) {
+          heading.textContent = "❌ Incorrect – Try Again";
+          text.textContent = `You have ${maxTries - tries} attempt${maxTries - tries > 1 ? "s" : ""} left.`;
+          congrats.style.display = "none";
+          answerBox.classList.add("incorrect");
+          answerBox.style.display = "block";
+        } else {
+          // Out of tries — show full explanation
+          heading.textContent = "❌ No More Attempts – Here's the Truth";
+          text.innerHTML = `
+            <strong>How Evelyn was killed:</strong><br>
+            Clara first tried to poison Evelyn’s wine, but when Evelyn didn’t drink it, Clara secretly poisoned her sedatives instead. Evelyn took the poisoned pills, causing symptoms like foam at the mouth and bruising that show it was a deliberate poisoning. Clara then locked the door and staged the scene to look like a suicide or overdose.<br><br>
+            <strong>Why Clara is the murderer:</strong><br>
+            Clara’s perfume was found on Evelyn, proving she was close despite denying it. Evelyn’s angry text to “J” shows Clara confronted her before the murder. Clara had strong personal reasons—jealousy, past fights, and a failed audition—that gave her motive. She had no solid alibi during the murder time, and the evidence of poisoning matches her plan to kill and cover it up.
+          `;
+          congrats.style.display = "none";
+          answerBox.classList.add("incorrect");
+          answerBox.style.display = "block";
+          // Disable input after final try
+          document.getElementById("guess").disabled = true;
+          event.target.disabled = true;
+        }
       }
     }
   </script>
