--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       } else {
         if (tries < maxTries) {
           heading.textContent = "❌ Incorrect – Try Again";
-          text.textContent = `You have ${maxTries - tries} attempt${maxTries - tries > 1 ? "s" : ""} left.`;
+          text.textContent = `You have ${maxTries - tries} attempt${maxTries - tries > 1 ? "s" : ""} left. The killer is Clara Jane Summers.`;
           congrats.style.display = "none";
           answerBox.classList.add("incorrect");
           answerBox.style.display = "block";
@@ -105,6 +105,7 @@
           // Out of tries — show full explanation
           heading.textContent = "❌ No More Attempts – Here's the Truth";
           text.innerHTML = `
+            <strong>The killer is Clara Jane Summers.</strong><br><br>
             <strong>How Evelyn was killed:</strong><br>
             Clara first tried to poison Evelyn’s wine, but when Evelyn didn’t drink it, Clara secretly poisoned her sedatives instead. Evelyn took the poisoned pills, causing symptoms like foam at the mouth and bruising that show it was a deliberate poisoning. Clara then locked the door and staged the scene to look like a suicide or overdose.<br><br>
             <strong>Why Clara is the murderer:</strong><br>
