--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </style>
 </head>
 <body>
-  <h1>Detective Jenkins' Final Question</h1>
+  <h1>Detective, have you found the killer?</h1>
   <p>Who do you believe murdered Evelyn Harper? <br><em>(Enter full name to unlock case report)</em></p>
   <input type="text" id="guess" placeholder="Enter suspect's full name" />
   <button onclick="checkAnswer()">Submit</button>
